--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,38 @@
+:root {
+  --primary: rebeccapurple;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  list-style: none;
+}
+
+body {
+  background-color: #222;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  /* height: 100vh; */
+  /* width: 100%; */
+  max-width: 5100px;
+  overflow: hidden;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+@media screen and (max-width: 360px) {
+  html {
+    font-size: 10px;
+  }
 }
